src/deployments/portal/api-template.yaml
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-protected-product-1
spec:
  name: Product Red
  state: active
  active: true
  partitions:
    acl: true
  access_rights_array:
    - name: httpbin-protected
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-protected-product-2
spec:
  name: Product Blue
  state: active
  active: true
  partitions:
    acl: true
  access_rights_array:
    - name: httpbin-protected
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-protected-product-3
spec:
  name: Product Green
  state: active
  active: true
  partitions:
    acl: true
  access_rights_array:
    - name: httpbin-protected
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-protected-plan-gold
spec:
  name: Gold Plan
  state: active
  active: true
  partitions:
    quota: true
    rate_limit: true
  rate: 10000
  access_rights_array:
    - name: httpbin-protected
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-protected-plan-silver
spec:
  name: Silver Plan
  state: active
  active: true
  rate: 1000
  partitions:
    quota: true
    rate_limit: true
  access_rights_array:
    - name: httpbin-protected
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-protected-plan-bronze
spec:
  name: Bronze Plan
  state: active
  active: true
  rate: 60
  partitions:
    quota: true
    rate_limit: true
  access_rights_array:
    - name: httpbin-protected
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-protected-plan-basic
spec:
  name: Basic Plan
  state: active
  active: true
  rate: 10
  partitions:
    quota: true
    rate_limit: true
  access_rights_array:
    - name: httpbin-protected
      namespace: replace_namespace
      versions:
        - Default
